--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GameEcology"
         tools:targetApi="31" >
-        <activity android:name=".Main" android:exported="true"
-            android:windowSoftInputMode="stateHidden" >
+        <activity android:name=".Auth"
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".Menu"/>
     </application>
 
 </manifest>
